--- a/sublibrary/build.gradle
+++ b/sublibrary/build.gradle
@@ -1,23 +1,6 @@
-plugins {
-	id 'convention.java-library'
-	id 'org.springframework.boot' apply false
-	id 'io.spring.dependency-management'
-}
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
+apply from: "${rootDir}/convention/boot-library.gradle"
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-  
-dependencyManagement {
-	imports {
-		mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
 }
