--- a/convention/java-application.gradle
+++ b/convention/java-application.gradle
@@ -6,3 +6,7 @@
 //   apply from: "${rootDir}/convention/java-application.gradle
 // ============================================================
 apply plugin: 'convention.java-application'
+
+// ============================================================
+// 以下に共通の設定を指定します
+// ============================================================
