--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+	id 'java-gradle-plugin'
 	id 'groovy-gradle-plugin'
 }
 
@@ -44,3 +45,23 @@ dependencies {
 		implementation 'com.mycila:license-maven-plugin:4.1'
 	}
 }
+
+gradlePlugin {
+	plugins {
+		bootApplicationPlugin {
+			id = 'plugin.SpringBootApplicationPlugin'
+			implementationClass = 'plugin.SpringBootApplicationPlugin'
+		}
+		bootLibraryPlugin {
+			id = 'plugin.SpringBootLibraryPlugin'
+			implementationClass = 'plugin.SpringBootLibraryPlugin'
+		}
+	}
+}
+/*
+eclipse.classpath.file.whenMerged {
+	def jreEntry = entries.find { it.path.contains("org.eclipse.jdt.launching.JRE_CONTAINER") }
+	jreEntry.entryAttributes['module'] = 'true'
+	jreEntry.entryAttributes['limit-modules'] = 'java.base'
+}
+*/
