--- a/sub-boot-lib/build.gradle
+++ b/sub-boot-lib/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-	id 'convention.boot-application'
-//	id 'plugin.SpringBootApplicationPlugin'
+	id 'convention.boot-library'
 }
 
 dependencies {
