--- a/sub-java-lib/build.gradle
+++ b/sub-java-lib/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-	id 'convention.boot-library'
+	id 'convention.java-library'
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'joda-time:joda-time:2.11.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
 }
